--- a/PonzianiComponents/PonzianiComponents.csproj
+++ b/PonzianiComponents/PonzianiComponents.csproj
@@ -19,7 +19,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>0.2.3.0</AssemblyVersion>
     <FileVersion>0.2.3.0</FileVersion>
-    <PackageReleaseNotes>Figurine Notation</PackageReleaseNotes>
+    <PackageReleaseNotes>Support for Long Algebraic and for ICCF Notation</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
